--- a/django_project/localities/templates/data_loader_form.html
+++ b/django_project/localities/templates/data_loader_form.html
@@ -1,23 +1,16 @@
-<html xmlns="http://www.w3.org/1999/html">
-  <head>
-  </head>
-  <body>
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal"
-             aria-hidden="true">×</button>
-        <h4 class="modal-title">Data Loader</h4>
-    </div>
-    <div class="modal-body">
-      <div role="tabpanel" class="tab-pane active" id="filled">
-        {% load crispy_forms_tags %}
-        <form method="post" class="">
-          {% csrf_token %}
-          {{ form.as_p }}
-          <input type="button" class="btn btn-default"
-                 data-dismiss="modal" value="Close"/>
-          <input type="submit" class="btn btn-default" value="Load Data" />
-        </form>
-      </div>
-    </div>
-  </body>
-</html>
+<div class="modal hide" id="dataLoaderModal">
+    <form class="well" method="post" action="">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">×</button>
+            <h3>Healthsites Data Loader</h3>
+        </div>
+        <div class="modal-body">
+            {% csrf_token %}
+            {{form.as_p}}
+        </div>
+        <div class="modal-footer">
+            <input class="btn btn-primary" type="submit" value="Save" />
+            <input name="cancel" class="btn" type="submit" value="Cancel"/>
+        </div>
+    </form>
+</div>
