--- a/django_project/localities/templates/data_loader_form.html
+++ b/django_project/localities/templates/data_loader_form.html
@@ -1,5 +1,5 @@
 <div class="modal hide" id="dataLoaderModal">
-    <form class="well" method="post" action="">
+    <form class="well" method="post" action="data-loader">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">×</button>
             <h3>Healthsites Data Loader</h3>
